examples/test/testpolicy1864.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1864
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key16: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value27
      podSelector:
        matchLabels:
          key36: value7
          key29: value41
          key25: value47
